plugins/kotlin/idea/tests/testData/gradle/hmppImportAndHighlighting/multiModulesHmpp/top-mpp/src/jsJvm18iOSMain/kotlin/transitiveStory/bottomActual/mppBeginning/MPOuter.kt
package transitiveStory.bottomActual.mppBeginning

// has a child in jsJvm18Main
actual open class <!LINE_MARKER("descr='Has declaration in common module'"), LINE_MARKER("descr='Is subclassed by ChildOfMPOuterInShared  Click or press ... to navigate'")!>MPOuter<!> {
    protected actual open val <!LINE_MARKER("descr='Has declaration in common module'")!>b<!>: Int = 2565
    internal actual val <!LINE_MARKER("descr='Has declaration in common module'")!>c<!>: Int = 2456
    actual val <!LINE_MARKER("descr='Has declaration in common module'")!>d<!>: Int = 324

    protected actual class <!LINE_MARKER("descr='Has declaration in common module'")!>MPNested<!> {
        actual val <!LINE_MARKER("descr='Has declaration in common module'")!>e<!>: Int = 245
    }

}